# eic-experimentation

./: .gitignore  README.md  setup.py
eic/: __init__.py
eic-datathon-kedro/: README.md  pyproject.toml  requirements.txt
eic-datathon-kedro/conf/: logging.yml
eic-datathon-kedro/src/eic_datathon_kedro/: __init__.py  __main__.py  settings.py
eic-datathon-kedro/src/eic_datathon_kedro/pipelines/generate_synthetic/: __init__.py  nodes.py  pipeline.py
eic/code/: benchmark_report.py
eic_benchmark_report_generator/: __init__.py  setup.py
eic_benchmark_report_generator/code/: benchmark_report.py
eic_case_studies/: README.md  __init__.py  requirements.txt
eic_case_studies/config/: logging.yaml  oa.yaml
eic_case_studies/getters/: io.py  oa.py  oa_institutions.py  oa_works.py  s3io.py
eic_case_studies/pipeline/cs2/: dbp_tagging_flow.py  oai_validation_flow.py  specter_embedding_flow.py  topic_assignment_flow.py
eic_case_studies/pipeline/cs2/analysis/: consortia_compute_div.py  consortia_join_flow.py  consortia_plot_flow.py  getters  proposals_compute_div.py  proposals_join_flow.py  proposals_plot_flow.py  researchers_compute_div.py  researchers_join_flow.py  researchers_plot_flow.py  topic_disparity_flow.py
eic_case_studies/pipeline/cs2/base/: dbp_tagging.py
eic_case_studies/pipeline/cs2/researchers/: cf_oa_outputs.py  (+3 more)
eic_case_studies/pipeline/openalex/: getters  oa_api.py  oa_institutions_api.py  oa_works_api.py
eic_datathon/: README.md  requirements.txt  setup.py
eic_datathon/pipeline/synthetic_generation/: generator_metaflow.py  getters
